platform/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: platform-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - habari.local
    secretName: platform-tls
  rules:
  - host: habari.local
    http:
      paths:
      - backend:
          serviceName: platform-service
          servicePort: 8000
